fixed header responsiveness on mobile

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -54,8 +54,17 @@ input#AboutUs:active {
         margin-right: 0px;
         font-size: 10px;
     }
-    img#logo{
+    /* img#logo{
         width: 80px;
         height: 80px;
+    } */
+
+    h1#title,
+    input#AboutUs {
+      display: none;
+    }
+    
+    div#header {
+      justify-content: center;
     }
 }
